demo: open props installed locally and used in the css modules(stylance)

--- a/demo/app/src/pages/home.module.scss
+++ b/demo/app/src/pages/home.module.scss
@@ -1,4 +1,9 @@
+@use "pkg:open-props/open-props.min.css";
+@use "pkg:open-props/normalize.min.css";
+@use "pkg:open-props/buttons.min.css";
+
+
 .hero {
     display: flex;
-    gap: var(--size-4)
+    gap: var(--size-3)
 }
