--- a/demo/app/src/lib.module.scss
+++ b/demo/app/src/lib.module.scss
@@ -1,3 +1,7 @@
+@use "pkg:open-props/open-props.min.css";
+@use "pkg:open-props/normalize.min.css";
+
+
 :root {
     font-family: var(--font-geometric-humanist);
     --link-font-size: 0.875rem;
@@ -15,15 +19,6 @@
     align-items: center;
     block-size: var(--nav-block-size);
 
-    // & button {
-    //     font-size: var(--font-size-5);
-    //     background-color: inherit;
-    //     color: white;
-    // }
-
-    // & a {
-    //     color: white;
-    // }
 
     .logo {
         max-inline-size: calc(var(--size-11) + var(--size-2));
